--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<section>
 					<h2>Can't wait till we hang next</h2>
 					<p class="fragment">
-						Maybe we can read some scary stories...like Thomas the Tank Engine?
+						Maybe we can read some more scary stories...like Thomas the Tank Engine?
 					</p>
 					<p class="fragment">
 						<img src="images/scrary_thomas.jpeg" height="450">
